Now the days of the schedule and classes are translucent and stick to the top of the screen when scrolling.

--- a/fitness/core/templates/core/trainer.html
+++ b/fitness/core/templates/core/trainer.html
@@ -104,4 +104,5 @@
 {% block scripts %}
 <script src="{% static 'users/js/messages.js' %}"></script>
 <script src="{% static 'schedule/js/schedule.js' %}"></script>
+<script src="{% static 'schedule/js/sticky.js' %}"></script>
 {% endblock %}
